--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
 
 .logo_container {
     text-align: center;
-    padding: 1.3em 0;
+    padding: 1.3em 0 0.8em 0;
 }
 
 .logo {
@@ -23,7 +23,7 @@ body {
 
 .header_copy_wrapper {
     text-align: center;
-    padding: 0.5em 1em 0 1em;
+    padding: 0.5em 1.5em 0 1.5em;
 }
 
 .header_copy_wrapper h1 {
