--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,8 @@ body {
 .header_copy_wrapper {
     text-align: center;
     padding: 0.5em 1.5em 0 1.5em;
+    max-width: 500px;
+    margin: 0 auto;
 }
 
 .header_copy_wrapper h1 {
@@ -75,6 +77,19 @@ body {
 
 .form_wrapper {
     padding: 2em 2em 0.5em 2em;
+    max-width: 500px;
+    margin: 0 auto;
+}
+
+.project_address_wrapper input {
+    margin-bottom: 3px !important;
+}
+
+.location_label {
+    text-align: right;
+    font-size: 10px;
+    color: #4E4E4E;
+    font-weight: normal;
 }
 
 .BBB_container {
@@ -88,6 +103,8 @@ body {
 .fine_print_wrapper {
     padding: 1em 1.5em;
     text-align: center;
+    max-width: 500px;
+    margin: 0 auto;
 }
 
 .fine_print_wrapper p {
@@ -163,4 +180,24 @@ body {
     cursor: pointer;
     -webkit-transition: 500ms color ease;
     transition: 500ms color ease;
+}
+
+@media screen and (min-width: 375px) {
+    .logo {
+        width: 18%;
+    }
+
+    .BBB_container img {
+        width: 18%;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .logo {
+        width: 9%;
+    }
+
+    .BBB_container img {
+        width: 9%;
+    }
 }
