--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,14 @@ body {
     padding: 1.3em 0 0.8em 0;
 }
 
+.main_content_wrapper {
+    background: #FBFBFB;
+    -webkit-box-shadow: 0px 4px 34px rgba(134, 134, 134, 0.25);
+    box-shadow: 0px 4px 34px rgba(134, 134, 134, 0.25);
+    width: 90%;
+    margin: 0 auto;
+}
+
 .logo {
     width: 20%;
 }
@@ -94,6 +102,7 @@ body {
 
 .BBB_container {
     text-align: center;
+    padding: 1.5em 0;
 }
 
 .BBB_container img {
